2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.
 
2014-01-14  Zachary Hopping <hoppingz@msu.edu>
 * Added code to server.py to return an HTTP response.

 2014-01-21  Zachary Hopping <hoppingz@msu.edu>
 * Fixed line breaks and cleaned up code in server.py.

 2014-01-22  Zachary Hopping <hoppingz@msu.edu>
 * Added main and handle_connection functions in server.py.
 * Added handling for content, image, and file request paths to server.py.
 * Added basic support for POST requests to server.py.
 * Added tests for different request paths and POST requests in test_server.py.